2012-01-25  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkImgPhoto.c: [Bug 2433260]: non-critical error in
	Tk_PhotoPutBlock

2011-11-22  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/wish.1: Use the same shebang comment everywhere.
	* library/demos/hello
	* library/demos/rmt
	* library/demos/square
	* library/demos/tcolor
	* library/demos/timer
	* library/demos/widget
	* unix/Makefile.in: [Bug 1945073]: Demo square.tcl
	* win/Makefile.in: cannot run; need package tktest

2011-11-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/pack.n: Fix the escaping of leading dots in lines that start with
	a widget name, so that nroff doesn't mistake it as a non-existing macro
	and skips the entire line.

2011-11-17  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* generic/tkCanvas.c: [Bug 3437816]: Missing TCL_ERROR return
	in [canvas lower].

2011-10-11  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tk.h:  Add dummy user_data field to
	XVirtualEvent, for improved upwards compatibility
	with Tk 8.5.

2011-09-26  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/rules.vc:  Support Visual Studio 11

2011-09-06  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4:    Add --disable-rpath option to configure
	* unix/configure: script (backported from Tcl 8.5)

2011-08-30  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4:    Make SHLIB_LD_LIBS='${LIBS}' the default and
	* unix/configure: set to "" on per-platform necessary basis.
	Add Haiku support and better NetBSD/FreeBSD support.
	All of this backported from TEA resp. Tcl8.5, but kept all
	original platform code which was removed from TEA.

2011-08-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkCanvLine.c: [Bug 3388350] mingw64 compiler warnings
	* generic/tkConsole.c
	* generic/tkListbox.c
	* win/tkWin3d.c
	* win/tkWinButton.c
	* win/tkWinCursor.c
	* win/tkWinDraw.c
	* win/tkWinImage.c
	* win/tkWinKey.c
	* win/tkWinMenu.c
	* win/tkWinWm.c
	* win/tkWinX.c
	* win/tkWindow.c